<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora_Activity">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/bienvenido" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/bienvenidodd"
            android:textSize="24dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            app:srcCompat="@drawable/fer" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:text="@string/numuno" />

        <EditText
            android:id="@+id/introducirNumUno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hinuno"
            android:inputType="number"
            android:minHeight="48dp" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:text="@string/numdos" />


        <EditText
            android:id="@+id/introducirNumDos"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/hindos"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSumar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/btnSum" />

            <Button
                android:id="@+id/btnRestar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/btnRes" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/btnMult" />

            <Button
                android:id="@+id/btnDividir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="@string/btnDiv" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ress"/>

        <TextView
            android:id="@+id/resultadoCalc"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textAlignment="center"
            android:textSize="34sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>